--- a/inventories/poc/group_vars/tower.yml
+++ b/inventories/poc/group_vars/tower.yml
@@ -177,6 +177,13 @@ tower_config:
           job_type: run
           inventory: localhost
           ask_extra_vars: true
+        - name: vmware-add-datastore
+          playbook: pb-vmware-add-datastore.yml
+          project: ansible
+          description: Add New VMWare datastore
+          job_type: run
+          inventory: localhost
+          ask_extra_vars: true
           ## Job Template Options
           # name: "{{ tower_config_organization_job_template.name }}"
           # playbook: "{{ tower_config_organization_job_template.playbook }}"
